--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://slvt1.github.io/weather-app-react",
+  "homepage": "https://slvt1.github.io/weather-app-react",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
